feat: generate receipt from schedule

--- a/packages/server/src/views/reports/receipt-per-invoice.hbs
+++ b/packages/server/src/views/reports/receipt-per-invoice.hbs
@@ -18,7 +18,7 @@
 <main>
   <span>
     Declaro que recebi a importância de
-    <strong>R$ {{ receiptValue }} (cem reais)</strong> referente a nota fiscal
+    <strong>R$ {{ receiptValue }} ({{ receiptValueExtense }})</strong> referente a nota fiscal
     <strong>{{ number }}</strong> do fornecedor <strong>{{ providerName }}</strong> pela
     transportadora <strong>{{ shippingName }}</strong>
   </span>
