refact: change costs report column size

--- a/packages/server/src/views/reports/costs.hbs
+++ b/packages/server/src/views/reports/costs.hbs
@@ -41,7 +41,7 @@
   main div.table div#C2.column,
   main div.table div#C3.column,
   main div.table div#C4.column {
-    width: 145px;
+    width: 120px;
   }
 
   main div.table div.row div#C2.column,
@@ -77,13 +77,13 @@
     justify-content: space-between;
 
     padding: 2px 4px;
-    width: 146px;
+    width: 121px;
     border: 1px solid black;
     border-top: none;
   }
 
   footer>div+div {
-    width: 145px;
+    width: 120px;
     border-left: none;
   }
 </style>
@@ -92,7 +92,7 @@
   <div class="table">
     <div class="header">
       <div id="C1" class="column">Transportadora</div>
-      <div id="C2" class="column">Forma de Pagamento</div>
+      <div id="C2" class="column">Pagamento</div>
       <div id="C3" class="column">Valor Descarga</div>
       <div id="C4" class="column">Valor Recibo</div>
     </div>
