refact: change cost report value column naming

--- a/packages/server/src/views/reports/costs.hbs
+++ b/packages/server/src/views/reports/costs.hbs
@@ -93,8 +93,8 @@
     <div class="header">
       <div id="C1" class="column">Transportadora</div>
       <div id="C2" class="column">Pagamento</div>
-      <div id="C3" class="column">Valor Descarga</div>
-      <div id="C4" class="column">Valor Recibo</div>
+      <div id="C3" class="column">Vl. Descarga</div>
+      <div id="C4" class="column">Vl. Recibo</div>
     </div>
 
     {{#each schedules}}
